--- a/jl-search.css
+++ b/jl-search.css
@@ -1,41 +1,48 @@
 jl-search {
   display: inline-block;
-
-  --_padding: var(--padding, .5em);
-  --_outline-color: var(--c-outline );
-  --_shadow-color: var(--c-shadow);
-  --_hover-color: var(--c-on-surface );
-  --_focus-color: var(--c-primary);
-  --_disabled-color: var(--c-outline-a33);
-	--_field-bg:  var(--c-background);
-  --_disabled_content_opacity: var(--opacity-disabled-content, .38);
-  --_border-width: .15rem;
-  --_border-width-focus: .25rem;
-  --_border-radius: .35rem;
-  --_hr-color: var(--c-surface-dim);
-
-  --_drop-shadow: 0 .8rem 1rem 0 rgba(0 0 0 / .5);
-
   font-family: var(--font-family, sans-serif);
+  --_padding: var(--padding, .5em);
+  --_enabled-color: var(--outline-color, gray );
+  --_hover-color: var(--hover-color, black );
+  --_active-color: var(--active-color, orange );
+  --_focus-color: var(--focus-color, green);
+  --_focus-bg: var(--focus-bg, lightgray);
+  --_disabled-color: var(--disabled-color, silver);
+	--_input-bg:  var(--input-bg);
+  --_input-ink: var(--input-ink);
+  --_disabled_content_opacity: var(--disabled-opacity, .38);
+  --_border-width: var(--border-width, .15rem);
+  --_border-width-focus: var(--border-width-focus, .25rem);
+  --_border-radius: var(--border-radius, .35rem);
+  --_hr-color: var(--hr-background, silver);
+  --_shadow-color: var(--shadow-color, black);
+  --_drop-shadow: 0 .8rem 1rem 0 rgba(0 0 0 / .5);
+  --_outline-color: var(--_enabled-color);
+  --_error-ink: var(--error-ink, red);
+  --_error-container-bg: var(--error-container-bg, lightsalmon);
+  --_error-container-ink: var(--error-container-ink, maroon);
+
 }
 
-jl-search>label>.material-symbols-outlined {
-  font-size: 1.5em;
-  margin: -.25em 0;
-  /* Do not contribute to parent height */
-  user-select: none;
-  /* selecting ligature icons suck */
+
+jl-search>.input-wrapper> span{
+  flex: 0 0 auto;
 }
 
 jl-search input {
-  padding: 0;
+  /* padding: 0; */
+  padding: var(--_padding);
+
   margin: 0;
   border: none;
   outline: none;
   font-family: inherit;
   font-size: inherit;
+  line-height: inherit;
   color: inherit;
   background-color: transparent;
+
+  /* flex: 1 1 2em; */
   width: 100%;
 }
 
@@ -45,38 +52,50 @@ jl-search input:focus-within {
   border: none;
 }
 
-jl-search:hover>label {
-  outline-color: var(--_hover-color);
+jl-search:hover {
+  --_outline-color: var(--_hover-color);
 }
 
-jl-search>label {
+jl-search:hover:active {
+  --_outline-color: var(--_active-color);
+}
+
+jl-search>.input-wrapper {
+
   display: flex;
   align-items: center;
   gap: var(--_padding);
 
   border-radius: var(--_border-radius);
-  padding: var(--_padding);
-  background: var(--_field-bg);
+
+  /* padding: var(--_padding); */
+
+  background: var(--_input-bg);
+  color: var(--_input-ink);
   transition: box-shadow .2s;
 
   /* Using outline for stable position when outline width changes */
   outline: var(--_border-width) solid var(--_outline-color);
-
 }
 
-jl-search>label:focus-within {
-  outline: var(--_border-width-focus) solid var(--_focus-color);
+jl-search>.input-wrapper>.state:hover {
+  background: var(--_focus-bg);
 }
 
-jl-search:has(input:disabled) {
+jl-search:focus-within {
+  --_outline-color: var(--_focus-color);
+}
+
+jl-search>.input-wrapper:focus-within {
+  outline-width: var(--_border-width-focus);
+}
+
+jl-search:has(input:disabled,input:active:disabled) {
   opacity: var(--_disabled_content_opacity);
+  --_outline-color: var(--_disabled-color);
 }
 
-jl-search>label:has(input:disabled) {
-  outline-color: var(--_disabled-color);
-}
-
-jl-search[open] > label {
+jl-search[opened] > .input-wrapper {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   outline-width: var(--_border-width-focus);
@@ -86,64 +105,110 @@ jl-search[open] > label {
 
 
 jl-search .options {
-  border: var(--_border-width-focus) solid var(--_outline-color);
-  border-bottom-right-radius: var(--_border-radius);
-  border-bottom-left-radius: var(--_border-radius);
-  background: var(--_field-bg);
-  border-top: 0;
-  margin: 0;
-  box-shadow: var(--_drop-shadow);
+  border-radius: var(--_border-radius);
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
 
-  /* Using border instead of outline so that the popover can be drawn without
-  a top border. Adjust the width and position for aligning with the input that
-  uses outline. */
+  /* First line paints over the top shadow. Adding 1px for rounding errors */
+  box-shadow:
+  0 calc( -1px - var(--_border-width-focus) ) 0 0 var(--_input-bg)
+  , 0 0 0 var(--_border-width-focus) var(--_outline-color)
+  , var(--_drop-shadow);
+
+  border: 0;
+  margin: 0;
+  padding: 0;
+  background: var(--_input-bg);
+
   box-sizing: border-box;
   position: absolute;
-
   top: anchor(bottom);
-  left: calc( anchor(left) - var(--_border-width-focus) );
-  width: calc( anchor-size(width) + 2 * var(--_border-width-focus) );
+  left: anchor(left);
+  width: anchor-size(width);
+  overflow: hidden;
 }
 
-/* jl-search[open] .options {
+jl-search .options:not(.loaded-popover){
+  visibility:hidden;
+}
+
+
+/* jl-search[opened] .options {
   visibility: visible;
 } */
-
-jl-search:hover .options{
-  border-color: var(--_hover-color);
-}
-jl-search:has(>label:focus-within) .options {
-  border-color: var(--_focus-color);
-}
-
 
 jl-search .options hr {
   border: thin solid var(--_hr-color);
   margin: 0 var(--_padding);
 }
 
-.state-loading {
- animation: spin 2s infinite linear;
+/* jl-search .options.empty ul { display: none } */
+/* jl-search .options.empty ul { max-height:0em } */
+
+jl-search .options.empty hr:has(+ul) { display: none }
+
+jl-search .options hr:has(+.error) { display: none }
+jl-search .options .error {
+  /* margin: calc( 0px - var(--padding)); */
+  
+  background: var(--_error-container-bg);
+  color: var(--_error-container-ink);
 }
 
-.state-loading::before {
-  content: "progress_activity";
+jl-search[data-state="loading"] .state {
+  height: 1em;
 }
 
-.state-normal::before { content: "dictionary" }
+jl-search[data-state="error"] .state {
+  color: var(--_error-ink);
+}
 
 jl-search ul {
   list-style: none;
   margin: 0;
-  padding: var(--_padding);
+  padding: var(--_padding) 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+  /* gap: calc( var(--padding) / 3 ); */
+  line-height: 1;
+
+  /* transition: height 2s;
+  transition-behavior: allow-discrete; */
+
 }
 
-.feedback {
+jl-search ul > li {
+  /* padding: calc(var(--_padding)/3) var(--_padding) ; */
+  padding: 0 var(--_padding) ;
+}
+
+/* 
+li::view-transition-old(*){
+  animation: 0.25s linear both shrink-y;
+}
+li::view-transition-new(*){
+  animation: 0.25s linear both grow-y;
+} */
+
+
+
+
+
+jl-search ul > li:hover {
+  background: var(--_focus-bg);
+  cursor: pointer;
+}
+
+jl-search .feedback {
   font-size: .875em;
   padding: var(--_padding);
-  /* padding-left: var(--_padding);
-  padding-top: calc( var(--_padding) *.5) */
 
+}
+
+jl-search .spin {
+  animation: spin 2s infinite linear;
 }
 
 @keyframes spin {
@@ -155,3 +220,71 @@ jl-search ul {
     transform: rotate(359deg);
   }
 }
+
+/* Zoom in in input on smaller screens */
+
+@media (max-width: 25rem) {
+  jl-search {
+    view-transition-name: jl-search-field;
+  }
+
+  jl-search[opened] {
+    position: absolute;
+    top: var(--_border-width-focus);
+    left: var(--_border-width-focus);
+    width: calc(100% - 2 * var(--_border-width-focus) );
+    z-index: 2;
+  }
+}
+
+@keyframes grow-y {
+  from { transform: scaleY(0) }
+  to   { transform: scaleY(1) }
+}
+
+@keyframes shrink-y {
+  from { transform: scaleY(1) }
+  to   { transform: scaleY(0) }
+}
+
+
+
+/* back-compat */
+[popover].\:popover-open {
+  /* transform: scaleY(1); */
+  max-height: 100svh;
+} 
+[popover]:popover-open {
+  /* transform: scaleY(1); */
+  max-height: 100svh;
+}
+
+[popover] {
+  max-height: 0svh;
+  /* transform: scaleY(0);
+  transform-origin: top; */
+
+  transition:
+    /* transform .3s, */
+    max-height .3s,
+    overlay .3s allow-discrete,
+    display .3s allow-discrete;
+}
+
+@starting-style {
+  [popover]:popover-open {
+    max-height: 0svh;
+    /* transform: scaleY(0); */
+  }
+
+  /* jl-search .options li {
+    height: 0rem;
+  } */
+}
+
+/* jl-search .options li {
+  height: 3rem;
+  transition height 3s, overlay 3s allow-discrete, display 3s allow-discrete;
+
+}
+ */
